# heliannuuthus-ai

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  logging.json  pyproject.toml
app/: main.py
app/internal/: __init__.py  exception.py  logging.py
app/prompts/: wikipedia.yml
app/routers/: __init__.py  wikipedia.py
server/: Dockerfile
server/app/: main.py
server/app/internal/: __init__.py  exception.py  logging.py
server/app/prompts/: __init__.py  wikipedia.yml
server/app/routers/: wikipedia.py
ui/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.mts
ui/src/: App.css  App.tsx  index.html  main.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
ui/src-tauri/capabilities/: desktop.json  imgrated.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: config.rs  core.rs  lib.rs
ui/src-tauri/src/config/: logging.rs  runtime.rs  window.rs
ui/src-tauri/src/core/: handler.rs  hotkey.rs
ui/src-tauri/src/utils/: macros.rs
ui/src/assets/styles/: font.css  index.css
ui/src/layout/: Sider.tsx  ThemeProvider.tsx
