[package]
name = "ui"
version = "0.1.0"
description = "heliannuuthus ai client"
authors = ["heliannuuthus"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "protocol-asset",
  "image-png",
  "image-ico",
] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-process = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-notification = "2.2.1"
tauri-plugin-clipboard-manager = "2.2.1"
tauri-plugin-deep-link = "2.2.0"
futures = "0.3"
tokio = { version = "1.43", features = ["full"] }
chrono = "0.4.40"
anyhow = "1.0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }


[target.'cfg(target_os = "linux")'.dependencies]
users = "0.11.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.2.0"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-updater = "2.5.1"
tauri-plugin-window-state = "2.2.1"


[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.18.0"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true

[profile.fast-release]
inherits = "release" # 继承 release 的配置
panic = "abort"      # 与 release 相同
codegen-units = 256  # 增加编译单元，提升编译速度
lto = false          # 禁用 LTO，提升编译速度
opt-level = 0        # 禁用优化，大幅提升编译速度
debug = true         # 保留调试信息
strip = false        # 不剥离符号，保留调试信息

[profile.fast-dev]
inherits = "dev"    # 继承 dev 的配置
codegen-units = 256 # 增加编译单元，提升编译速度
opt-level = 0       # 禁用优化，进一步提升编译速度
incremental = true  # 启用增量编译
debug = true        # 保留调试信息
strip = false       # 不剥离符号，保留调试信息
